# c_lib_project_template

./: CMakeLists.txt  README.md  build_mingw_ninja_release.bat  build_msvc_release.bat
inc/: examplec.h  examplec_defs.h  h1.h
src/: h1.c
test_app_src/: main.c
